--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -56,7 +56,7 @@
       <option value="4">4</option>
       <option value="5">5 (Strongly Agree)</option>
     </select>
-
+<!-- 
 
     <h3><strong>Question 3</strong></h3>
     <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
@@ -148,7 +148,7 @@
       <option value="3">3</option>
       <option value="4">4</option>
       <option value="5">5 (Strongly Agree)</option>
-    </select>
+    </select> -->
 
     <br>
     <br>
@@ -231,29 +231,29 @@
         });
         return isValid;
       }
-
+      var currentURL = window.location.origin;
       // If all required fields are filled
       if (validateForm()) {
-        // Create an object for the user"s data
+        // Create an object for the user's data
         var userData = {
           name: $("#name").val(),
           photo: $("#photo").val(),
           scores: [
-            $("#q1").val(),
+            parseInt($("#q1").val()),
             $("#q2").val(),
-            $("#q3").val(),
-            $("#q4").val(),
-            $("#q5").val(),
-            $("#q6").val(),
-            $("#q7").val(),
-            $("#q8").val(),
-            $("#q9").val(),
-            $("#q10").val()
+            // $("#q3").val(),
+            // $("#q4").val(),
+            // $("#q5").val(),
+            // $("#q6").val(),
+            // $("#q7").val(),
+            // $("#q8").val(),
+            // $("#q9").val(),
+            // $("#q10").val()
           ]
         };
-
+console.log(userData);
         // AJAX post the data to the friends API.
-        $.post("/api/friends", userData, function(data) {
+        $.post(currentURL + "/api/friends", userData, function(data) {
 
           // Grab the result from the AJAX post so that the best match's name and photo are displayed.
           $("#match-name").text(data.name);
