changed survey questions and photos added cartoon characters

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -3,13 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Friend Finder</title>
+
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="https://code.jquery.com/jquery.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <link href="/app/public/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Bungee+Outline&display=swap" rel="stylesheet">
 
+  <title>Friend Finder</title>
 </head>
 
 <body>
@@ -20,8 +21,14 @@
       <h3>Answer a few basic questions and see who might be your cartoon best friend!</h3>
       <hr>
 
-        <div>
-            <a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Toontown</h4></button></a>
+        <!-- <div>
+          
+              <button type="button" class="button"><p class="btnText">Go To</p>
+              <div class="btnTwo"><p class="btnText2">Toontown!</p>
+              </div>
+            </div> -->
+            <a href="/survey"><button type="button" class="btn">
+              <h4><span class="glyphicon glyphicon-list-alt"></span> Go to Toontown</h4></button></a>
           </div>
       
       <div>
@@ -36,5 +43,8 @@
     </div>
 </footer>
 
+
+<script src="https://code.jquery.com/jquery.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
