connected style.css

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -18,70 +18,13 @@
 
   <link href="https://fonts.googleapis.com/css?family=Bungee+Outline&display=swap" rel="stylesheet">
   
-  <link rel="stylesheet" href="/app/public/style.css">
+  <link rel="stylesheet" href="style.css" type="text/css" />
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
 
 </head>
 
 <body>
-    <style>
-        body{
-          text-align:center;
-          color: #1AAB8A;
-        }
-        .container {
-          background-image: url('/app/public/images/colorful-blur.jpg');
-        }
-  
-        body:before{
-          content:'';
-          height:100%;
-          display:inline-block;
-          vertical-align:middle;
-        }
-  
-        h1, h2 {
-          font-family: 'Bungee Outline', cursive;
-        }
-  
-        button{
-          background:#1AAB8A;
-          color:#fff;
-          border:none;
-          position:relative;
-          height:60px;
-          font-size:1.6em;
-          padding:0 2em;
-          cursor:pointer;
-          transition:800ms ease all;
-          outline:none;
-        }
-        button:hover{
-          background:#fff;
-          color:#1AAB8A;
-        }
-        button:before,button:after{
-          content:'';
-          position:absolute;
-          top:0;
-          right:0;
-          height:2px;
-          width:0;
-          background: #1AAB8A;
-          transition:400ms ease all;
-        }
-        button:after{
-          right:inherit;
-          top:inherit;
-          left:0;
-          bottom:0;
-        }
-        button:hover:before,button:hover:after{
-          width:100%;
-          transition:800ms ease all;
-        }
-  </style>
 
   <div class="container">
 
