adjusted formatting for site

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -3,45 +3,33 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>FriendFinder</title>
-
-  <!-- Latest compiled and minified CSS & JS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="https://code.jquery.com/jquery.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
-  <!-- Font Awesome Glyphicons -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-
-  <!-- Chosen -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.css">
-
-  <link href="https://fonts.googleapis.com/css?family=Bungee+Outline&display=swap" rel="stylesheet">
-  
-  <link rel="stylesheet" href="style.css" type="text/css" />
-  
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
-
+    <!-- Latest compiled and minified CSS & JS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+      <script src="https://code.jquery.com/jquery.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <!-- Font Awesome Glyphicons -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <!-- Chosen -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.css">
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Outline&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" type="text/css" />
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
+  <title>FriendFinder Survey</title>
 </head>
 
 <body>
-
   <div class="container">
-
     <h2>Survey Questions</h2>
     <hr>
-
-    <h3><strong>About You</strong></h3>
-    <h4>Name (Required)</h4>
-    <input type="text" id="name" class="form-control" required>
-
-    <h4>Link to Photo Image (Required)</h4>
-    <input type="text" id="photo" class="form-control" required>
-
+      <h3><strong>About You</strong></h3>
+        <h4>Name (Required)</h4>
+          <input type="text" id="name" class="form-control" required>
+        <h4>Link to Photo Image (Required)</h4>
+          <input type="text" id="photo" class="form-control" required>
     <hr>
 
     <h3><strong>Question 1</strong></h3>
-    <h4>I am constantly spinning all over the place.</h4>
+      <h4>I am constantly spinning all over the place.</h4>
     <select class="chosen-select" id="q1">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -52,7 +40,7 @@
     </select>
 
     <h3><strong>Question 2</strong></h3>
-    <h4>I live under a rock.</h4>
+      <h4>I live under a rock.</h4>
     <select class="chosen-select" id="q2">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -62,9 +50,8 @@
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
-
     <h3><strong>Question 3</strong></h3>
-    <h4>I feel I am constantly chasing what I can't have.</h4>
+      <h4>I feel I am constantly chasing what I can't have.</h4>
     <select class="chosen-select" id="q3">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -74,9 +61,8 @@
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
-
     <h3><strong>Question 4</strong></h3>
-    <h4>I am a very hardworker when hired to do a job.</h4>
+      <h4>I am a very hardworker when hired to do a job.</h4>
     <select class="chosen-select" id="q4">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -86,9 +72,8 @@
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
-
     <h3><strong>Question 5</strong></h3>
-    <h4>People easily understand what I say.</h4>
+      <h4>People easily understand what I say.</h4>
     <select class="chosen-select" id="q5">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -98,9 +83,8 @@
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
-
     <h3><strong>Question 6</strong></h3>
-    <h4>It's important to make people laugh.</h4>
+      <h4>It's important to make people laugh.</h4>
     <select class="chosen-select" id="q6">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -110,9 +94,8 @@
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
-
     <h3><strong>Question 7</strong></h3>
-    <h4>I'm a great detective.</h4>
+      <h4>I'm a great detective.</h4>
     <select class="chosen-select" id="q7">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -123,7 +106,7 @@
     </select>
 
     <h3><strong>Question 8</strong></h3>
-    <h4>It takes awhile for people to finally listen to me.</h4>
+      <h4>It takes awhile for people to finally listen to me.</h4>
     <select class="chosen-select" id="q8">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -134,7 +117,7 @@
     </select>
 
     <h3><strong>Question 9</strong></h3>
-    <h4>I'm happy in a long-term relationship.</h4>
+      <h4>I'm happy in a long-term relationship.</h4>
     <select class="chosen-select" id="q9">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -145,7 +128,7 @@
     </select>
 
     <h3><strong>Question 10</strong></h3>
-    <h4>I have been probed by aliens more than once.</h4>
+      <h4>I have been probed by aliens more than once.</h4>
     <select class="chosen-select" id="q10">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -155,12 +138,11 @@
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
-    <br>
-    <br>
+          <br>
+           <br>
 
     <!-- Submit Button -->
-    <button type="submit" class="button" id="submit">
-     Find My Bestie!</button>
+    <button type="submit" class="button" id="submit">Find My Bestie!</button>
 
     <hr>
     <footer class="footer">
@@ -179,12 +161,12 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
-          <h2 class="modal-title"><strong>Cartooniest Match</strong></h2>
+            <h2 class="modal-title"><strong>Cartooniest Match</strong></h2>
         </div>
         <div class="modal-body text-center">
           <h3>Your Cartoon Best Friend is </h3>
-          <h2 id="match-name"></h2>
-          <img id="match-img" src="" alt="">
+            <h2 id="match-name"></h2>
+              <img id="match-img" src="" alt="">
         </div>
         <div class="modal-footer">
           <button type="button" class="button" data-dismiss="modal">Close</button>
@@ -230,13 +212,12 @@
         });
 
         $(".chosen-select").each(function() {
-
           if ($(this).val() === "") {
             isValid = false;
-          }
-        });
+            }
+          });
         return isValid;
-      }
+        }
       var currentURL = window.location.origin;
       // If all required fields are filled
       if (validateForm()) {
@@ -260,21 +241,17 @@
 console.log(userData);
         // AJAX post the data to the Cartoon friends API.
         $.post(currentURL + "/api/friends", userData, function(data) {
-
           // The AJAX post allows us to grab the info to post it
-          $("#match-name").text(data.name);
-          $("#match-img").attr("src", data.photo);
-
+            $("#match-name").text(data.name);
+            $("#match-img").attr("src", data.photo);
           // Modal pop-up with the best Cartoon friend match
-          $("#results-modal").modal("toggle");
-
+            $("#results-modal").modal("toggle");
+          });
+        } else {
+          alert("Please fill out all fields before submitting!");
+        }
         });
-      } else {
-        alert("Please fill out all fields before submitting!");
-      }
-    });
   </script>
 
 </body>
-
 </html>
